syntax = "proto3";
package DecentralCardGame.cardchain.cardchain;

option go_package = "github.com/DecentralCardGame/Cardchain/x/cardchain/types";

message CollectionProposal {

  string title = 1;
  string description = 2;
  uint64 collectionId = 3;
}
